[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Themes/grey_inner_theme.tres" type="Theme" id=1]
[ext_resource path="res://Screens/LobbyDisplays/LobbyScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/logo_memoji.png" type="Texture" id=3]
[ext_resource path="res://Screens/LobbyDisplays/P_Status.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Screens/LobbyDisplays/Audience.gd" type="Script" id=6]
[ext_resource path="res://Screens/LobbyDisplays/ABCDcode.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 45
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="LobbyScreen" type="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme", "Transform" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="TitleContainer" type="CenterContainer" parent="VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 223.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="TitleTexture" type="TextureRect" parent="VBoxContainer/TitleContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 75.0
margin_right = 748.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Size Flags" ]

[node name="Content" type="MarginContainer" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 227.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="Lines" type="VBoxContainer" parent="VBoxContainer/Content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="TopLine" type="HBoxContainer" parent="VBoxContainer/Content/Lines" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 964.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Statuses" type="VBoxContainer" parent="VBoxContainer/Content/Lines/TopLine" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 880.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="PlayersRow1" type="HBoxContainer" parent="VBoxContainer/Content/Lines/TopLine/Statuses" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 880.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 124 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="P1" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow1" index="0" instance=ExtResource( 4 )]

margin_right = 212.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="P2" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow1" index="1" instance=ExtResource( 4 )]

margin_left = 222.0
margin_right = 434.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="P3" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow1" index="2" instance=ExtResource( 4 )]

margin_left = 444.0
margin_right = 656.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="P4" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow1" index="3" instance=ExtResource( 4 )]

margin_left = 666.0
margin_right = 880.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="PlayersRow2" type="HBoxContainer" parent="VBoxContainer/Content/Lines/TopLine/Statuses" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 880.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 1
_sections_unfolded = [ "Size Flags" ]

[node name="P5" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow2" index="0" instance=ExtResource( 4 )]

margin_right = 217.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="P6" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow2" index="1" instance=ExtResource( 4 )]

margin_left = 221.0
margin_right = 438.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="P7" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow2" index="2" instance=ExtResource( 4 )]

margin_left = 442.0
margin_right = 659.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="P8" parent="VBoxContainer/Content/Lines/TopLine/Statuses/PlayersRow2" index="3" instance=ExtResource( 4 )]

margin_left = 663.0
margin_right = 880.0
margin_bottom = 124.0
size_flags_horizontal = 3
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="Audience" type="Label" parent="VBoxContainer/Content/Lines/TopLine/Statuses" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 256.0
margin_right = 880.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Audience Members"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )
_sections_unfolded = [ "Mouse", "custom_constants", "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content/Lines/TopLine" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 884.0
margin_right = 964.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="StartButton" type="Button" parent="VBoxContainer/Content/Lines/TopLine/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Textures", "custom_fonts" ]

[node name="ExitButton" type="Button" parent="VBoxContainer/Content/Lines/TopLine/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Rect", "Textures", "custom_fonts" ]

[node name="BottomLine" type="HBoxContainer" parent="VBoxContainer/Content/Lines" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 279.0
margin_right = 964.0
margin_bottom = 349.0
rect_min_size = Vector2( 0, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Instructions" type="Label" parent="VBoxContainer/Content/Lines/BottomLine" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 825.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter code on your device to join!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_constants", "custom_fonts" ]

[node name="ABCDcode" type="Label" parent="VBoxContainer/Content/Lines/BottomLine" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 829.0
margin_top = 9.0
margin_right = 964.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABCD"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 7 )
_sections_unfolded = [ "Mouse", "Rect", "custom_constants", "custom_fonts" ]

[node name="AudienceContainer" type="HBoxContainer" parent="VBoxContainer/Content/Lines" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 353.0
margin_right = 964.0
margin_bottom = 353.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="NotAllPlayersHaveAvatar" type="PopupDialog" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -40.0
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 480, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false

[node name="Label" type="Label" parent="NotAllPlayersHaveAvatar" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -7.0
margin_right = 126.5
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Not all players have username or avatar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NotEnoughPlayersPopup" type="PopupDialog" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -40.0
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 480, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="NotEnoughPlayersPopup" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -7.0
margin_right = 86.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Not enough players joined."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="resized" from="VBoxContainer/Content/Lines/TopLine" to="." method="_on_TopLine_resized"]

[connection signal="pressed" from="VBoxContainer/Content/Lines/TopLine/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="VBoxContainer/Content/Lines/TopLine/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]


